fix: vertical align middle user bar links

--- a/src/layout/header-components/_user-bar.scss
+++ b/src/layout/header-components/_user-bar.scss
@@ -35,6 +35,7 @@ body:not(.loggedin) #header-bottom-right {
 
 .user {
   a {
+    vertical-align: middle;
     max-width: 120px;
     overflow: hidden;
     display: inline-block;
